# usbh-pio

./: Cargo.toml  LICENSE  NOTES.md  README.md
.cargo/: config.toml
Pico-PIO-USB/examples/: CMakeLists.txt
Pico-PIO-USB/examples/host_hid_to_device_cdc/: host_hid_to_device_cdc.c
Pico-PIO-USB/src/: coverage.h  pio_usb.c  pio_usb.h  pio_usb_configuration.h  pio_usb_device.c  pio_usb_host.c  pio_usb_ll.h  usb_rx.pio  usb_rx.pio.h
coverage_poc/: CMakeLists.txt  main.c
examples/: cassette_test.rs  kbd.rs  rtic.rs
src/: lib.rs  pio_usb.rs  pio_usb_configuration.rs  pio_usb_host.rs  pio_usb_ll.rs  usb_crc.rs  usb_definitions.rs  usb_rx.pio  usb_tx.pio
usb_crc/: Cargo.toml
usb_crc/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
