[workspace]
members = ["usb_crc"]

[package]
name = "usbh-pio"
version = "0.1.0"
edition = "2021"

[dependencies]
usb-device = "0.2.9"
usbh = { version = "0.1.0", path = "/Users/tom/rp-hal-usb-host-example/usbh" }
pio-proc = ">= 0.2"
pio = ">= 0.2"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
rp2040-hal = { git = "https://github.com/tommy-gilligan/rp-hal", branch = "experiment-usb-host", features=["rt", "critical-section-impl", "eh1_0_alpha"] }
vcell = "0.1.3"
cortex-m = "0.7"
usb_crc = { path = "usb_crc" }
defmt = "0.3"
