[workspace]
members = ["usb_crc", "xtask"]

[package]
name = "usbh-pio"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
defmt = "0.3"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
pio = ">= 0.2"
pio-proc = ">= 0.2"
rp2040-hal = { git = "https://github.com/tommy-gilligan/rp-hal", branch = "experiment-usb-host", features=["rt", "critical-section-impl", "eh1_0_alpha"] }
usb-device = "0.2.9"
usb_crc = { path = "usb_crc" }
usbh = { git = "https://github.com/nilclass/usbh" }
vcell = "0.1.3"

[dev-dependencies]
cortex-m-rt = "0.7"
cortex-m-rtic = "1.0.0"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp2040-boot2 = { version = "0.2.1" }
usbh-defmt = { git = "https://github.com/tommy-gilligan/usbh-defmt" }
trace = "*"
